# hpc_tutor

./: .clang-format  CMakeLists.txt  LICENSE  README.md
doc/: assignment_1.md  assignment_2.md  function_signatures.md
include/hpc_tutor/: linalg.hpp  linalg_t.hpp  matrix.hpp  matrix_view.hpp
src/: CMakeLists.txt  Matrix.hpp  MatrixView.hpp  matrix.hpp  trash.cpp
src/hpc_tutor/: Matrix.hpp  MatrixView.hpp
test/: CMakeLists.txt  assignment_1_benchmarks.cpp  assignment_1_tests.cpp  assignment_2_tests.cpp  linalg_benchmarks.cpp  linalg_t_tests.cpp  linalg_tests.cpp  matrix_tests.cpp  test_utils.hpp
user/assignment_1/: CMakeLists.txt  assignment_1_tests.cpp  problem_1.cpp  problem_1.hpp
user/assignment_2/: CMakeLists.txt  assignment_2_tests.cpp  problem_1.cpp  problem_1.hpp
